<resources>
    <string name="app_name">Ranchat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_chat_list">ChatListActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_state">state_message</string>
    <string name="prompt_contact">Contact</string>
    <string name="prompt_name">name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_enrollment">enrollment</string>


    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="chooser_title">Choose File</string>

    <string name="menu_title_logout">Logout</string>

    <string name="menu_title_chat_options">Chat Options</string>
    <string name="menu_title_create">Create Chat</string>
    <string name="menu_title_delete_chat">Delete Chat</string>
    <string name="typing_message">%s is typing…</string>

    <string name="take_picture">Take picture</string>
</resources>
